src/main/metadata/objects/Rental_Amount__c.object
<CustomObject>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Rental Amounts</relationshipLabel>
        <relationshipName>Rental_Amounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interest_Amount__c</fullName>
        <label>Interest Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Principal_Amount__c</fullName>
        <label>Principal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rental Amount</label>
    <nameField>
        <displayFormat>RA-{000000}</displayFormat>
        <label>Rental Amount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rental Amounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>